# WARM

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
src/warm/: main.py
src/warm/core/: __init__.py  analyzer.py  comparator.py  config.py  extractor.py  fetcher.py  scorer.py  tls_whois.py  urlscan.py
tests/: test_analyzer.py  test_cli.py  test_comparator.py  test_extractor.py  test_fetcher.py  test_sample_urls.txt  test_scorer.py  test_tls_whois.py  test_urlscan.py
