[metadata]
name = warm-risk-mapper
version = 0.1.0
description = "CLI toolkit for fingerprinting websites & computing explainable risk scores"
author = Sparsh M. Jain
author_email = you@example.com
license = MIT

[options]
package_dir =
    = src
packages = find:
install_requires =
    # leave blank; PyPI uses pyproject.toml dependencies

[options.entry_points]
console_scripts =
    warm = warm.main:main

